src/test/input/codegen/fail/declaration3.c
// Undeclared...

int test() {
    return 3;
}

int main() {

    int a = 5;
    int b = 3;
    
    int c = a + b;

    a = test() + c + a + b + d;

}